# CareSync

./: .dockerignore  .gcloudignore  .gitignore  DESIGN.md  Dockerfile  Overview.md  README.md  alloydb_init.sql  caresync.sql  cloudbuild.frontend.yaml  cloudbuild.yaml  cloudrun.env.example  frontend.Dockerfile  pyproject.toml
Datasets/: Indian_medicine_sample_100.csv  drug_interactions.csv
adk_agents/caresync_agent/: agent.py  recipe_agent.py
docs/: ARCHITECTURE_AND_DESIGN.md  CLOUD_RUN_DEPLOYMENT.md  CONNECTION_ARCHITECTURE.md  results_and_metrics.md
docs/Agent_Digrams/: communications_agent.md  data_fetcher_agent.md  document_agent.md  formulary_agent.md  hitl_agent.md  image_vision_agent.md  intake_agent.md  (+6 more)
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
notebooks/: LLM_performence_on_grounding_data.ipynb.ipynb  medgemma_working_reference.ipynb.ipynb  medical_input_for_adapter.ipynb  medsigslip_workking_reference.ipynb.ipynb  prepping_for_diet_to_medicine.ipynb
scripts/: convert_to_alloydb.py  create_calendar_demo_event.py  print_alloydb_proxy_command.py  seed_mus.py  setup_alloydb_vector.py  setup_bigquery_table.py  setup_env.ps1  upload_drive_demo_file.py  verify_medgemma_latency.py
tests/: test_api_models.py  test_brain_service.py  test_communications_agent.py  test_diet_recipes.py  test_doctor_aware_email.py  test_emergency.py  test_hitl_doctor_routing.py  test_medgemma_proxy.py  test_openfda_adapter.py  test_orchestrator.py  test_ticketing.py  test_ticketing_adapter.py
toolbox/: tools.yaml.example
(+91 files in other folders)
