[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caresync"
version = "0.2.0"
description = "AI-powered multi-agent chronic care management platform with FastAPI, MCP, and Google ADK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "google-api-python-client>=2.151.0",
  "google-auth-oauthlib>=1.2.1",
  "google-auth-httplib2>=0.2.0",
  "google-cloud-bigquery>=3.29.0",
  "google-genai>=1.0",
  "httpx>=0.27",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "jinja2>=3.1",
  "google-adk",
  "mcp[cli]",
  "google-cloud-speech>=2.21.0",
  "google-cloud-texttospeech>=2.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
hf = [
  "transformers>=4.52",
  "pillow>=10.4",
  "accelerate>=1.1",
  "sentencepiece>=0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
